--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: safemap
 description: Safely get value with Type from JSON map. Will return null value when value was wrong.
-version: 1.0.0
-author:
-homepage:
+version: 1.0.1
+author: mjl0602<675531696@qq.com>
+homepage: https://github.com/mjl0602
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
