--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: safemap
 description: Safely get value with Type from JSON map. Will return null value when value was wrong.
-version: 1.2.3
+version: 2.0.0-nullsafety.0
 author: mjl0602<675531696@qq.com>
 homepage: https://github.com/mjl0602
+publish_to: https://pub.dartlang.org
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
 
