--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: safemap
 description: Safely get value with Type from JSON map. Will return null value when value was wrong.
-version: 2.0.0-nullsafety.0
+version: 2.0.0
 author: mjl0602<675531696@qq.com>
 homepage: https://github.com/mjl0602
 publish_to: https://pub.dartlang.org
